# The-anthill

./: README.md  notifier.cpp
муравей/: CMakeLists.txt
муравей/include/: ant.hpp  anthill.hpp  enemy.hpp  food.hpp  map.hpp  notifier.hpp  roles.hpp  sticks.hpp
муравей/src/: ant.cpp  anthill.cpp  enemy.cpp  food.cpp  main.cpp  map.cpp  notifier.cpp  roles.cpp  sticks.cpp
